--- a/service/server/config/wrangler/prd/vspo-portal-cron/wrangler.toml
+++ b/service/server/config/wrangler/prd/vspo-portal-cron/wrangler.toml
@@ -14,7 +14,7 @@ service = "prd-vspo-portal-app"
 entrypoint = "ApplicationService"
 
 [triggers]
-crons = [ "0 0,7,18 * * *", "5 0,7,18 * * *", "*/2 * * * *", "*/30 * * * *", "*/1 * * * *", "15 * * * *", "30 21 * * *" ]
+crons = [ "0 0,7,18 * * *", "5 0,7,18 * * *", "*/2 * * * *", "*/30 * * * *", "*/1 * * * *", "15 * * * *", "30 21 * * *", "0 */3 * * *" ]
 
 [[workflows]]
 name = "prd-search-streams-workflow"
@@ -85,6 +85,11 @@ class_name = "SearchClipsByVspoMemberNameWorkflow"
 name = "prd-access-vspo-schedule-site-workflow"
 binding = "ACCESS_VSPO_SCHEDULE_SITE_WORKFLOW"
 class_name = "AccessVspoScheduleSiteWorkflow"
+
+[[workflows]]
+name = "prd-fetch-clips-by-creator-workflow"
+binding = "FETCH_CLIPS_BY_CREATOR_WORKFLOW"
+class_name = "FetchClipsByCreatorWorkflow"
 
 [vars]
 SERVICE_NAME = "prd-vspo-portal-cron"
