--- a/service/vspo-schedule/v2/web/package.json
+++ b/service/vspo-schedule/v2/web/package.json
@@ -27,10 +27,11 @@
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
     "@mui/system": "^7.1.0",
+    "@next/third-parties": "^15.3.3",
     "@opennextjs/cloudflare": "^1.2.0",
     "@vspo-lab/api": "workspace:^",
-    "@vspo-lab/error": "workspace:^",
     "@vspo-lab/dayjs": "workspace:^",
+    "@vspo-lab/error": "workspace:^",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.1",
     "dayjs": "^1.11.13",
