--- a/.github/workflows/deploy-server-workers.yaml
+++ b/.github/workflows/deploy-server-workers.yaml
@@ -56,6 +56,7 @@ jobs:
             DISCORD_TRANSLATION_SETTING
             DISCORD_BOT_MAINTENANCE
             API_KEY
+            MASTRA_BASE_URL
             MASTRA_AGENT_ID
             MASTRA_CF_ACCESS_CLIENT_ID
             MASTRA_CF_ACCESS_CLIENT_SECRET
@@ -76,6 +77,7 @@ jobs:
           DISCORD_TRANSLATION_SETTING: ${{ secrets.DISCORD_TRANSLATION_SETTING }}
           DISCORD_BOT_MAINTENANCE: ${{ secrets.DISCORD_BOT_MAINTENANCE }}
           API_KEY: ${{ secrets.API_KEY }}
+          MASTRA_BASE_URL: ${{ secrets.MASTRA_BASE_URL }}
           MASTRA_AGENT_ID: ${{ secrets.MASTRA_AGENT_ID }}
           MASTRA_CF_ACCESS_CLIENT_ID: ${{ secrets.MASTRA_CF_ACCESS_CLIENT_ID }}
           MASTRA_CF_ACCESS_CLIENT_SECRET: ${{ secrets.MASTRA_CF_ACCESS_CLIENT_SECRET }}
