--- a/service/server/package.json
+++ b/service/server/package.json
@@ -56,10 +56,7 @@
     "tslog": "^4.9.3",
     "uuid": "^11.1.0",
     "valibot": "1.0.0",
-    "zod": "catalog:",
-    "@vspo-lab/dayjs": "workspace:^",
-    "@vspo-lab/error": "workspace:^",
-    "@vspo-lab/logging": "workspace:^"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
