--- a/service/server/package.json
+++ b/service/server/package.json
@@ -31,6 +31,7 @@
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.2",
     "@langchain/cloudflare": "^0.1.0",
+    "@mastra/client-js": "^0.10.4",
     "@microlabs/otel-cf-workers": "1.0.0-rc.49",
     "@neondatabase/serverless": "^1.0.0",
     "@openfeature/server-sdk": "^1.17.1",
@@ -39,6 +40,9 @@
     "@tsndr/cloudflare-worker-jwt": "3.1.4",
     "@twurple/api": "^7.2.1",
     "@twurple/auth": "^7.2.1",
+    "@vspo-lab/dayjs": "workspace:^",
+    "@vspo-lab/error": "workspace:^",
+    "@vspo-lab/logging": "workspace:^",
     "ai": "^4.3.1",
     "dayjs": "catalog:",
     "discord-hono": "^0.16.4",
@@ -52,10 +56,7 @@
     "tslog": "^4.9.3",
     "uuid": "^11.1.0",
     "valibot": "1.0.0",
-    "zod": "catalog:",
-    "@vspo-lab/dayjs": "workspace:^",
-    "@vspo-lab/error": "workspace:^",
-    "@vspo-lab/logging": "workspace:^"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
