--- a/service/vspo-schedule/v2/web/package.json
+++ b/service/vspo-schedule/v2/web/package.json
@@ -13,6 +13,9 @@
     "cf:typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
@@ -43,8 +46,10 @@
     "next-sitemap": "^4.2.3",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-grid-layout": "^1.5.1",
     "react-i18next": "^14.1.2",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.3",
     "react-tweet": "^3.2.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
@@ -57,6 +62,7 @@
     "@types/node": "catalog:",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-grid-layout": "^1.3.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "typescript": "catalog:",
