--- a/service/server/config/wrangler/prd/vspo-portal-cron/wrangler.toml
+++ b/service/server/config/wrangler/prd/vspo-portal-cron/wrangler.toml
@@ -100,8 +100,9 @@ class_name = "AnalyzeClipsWorkflow"
 SERVICE_NAME = "prd-vspo-portal-cron"
 ENVIRONMENT = "production"
 LOG_TYPE = "json"
-LOG_MINLEVEL = "1"
+LOG_MINLEVEL = "info"
 LOG_HIDE_POSITION = "true"
 
 [observability]
 enabled = true
+invocation_logs = false
