--- a/service/server/config/wrangler/dev/vspo-portal-app/wrangler.toml
+++ b/service/server/config/wrangler/dev/vspo-portal-app/wrangler.toml
@@ -31,8 +31,9 @@ localConnectionString = "postgres://user:password@localhost:5432/vspo"
 SERVICE_NAME = "dev-vspo-portal-app"
 ENVIRONMENT = "development"
 LOG_TYPE = "json"
-LOG_MINLEVEL = "0"
+LOG_MINLEVEL = "info"
 LOG_HIDE_POSITION = "true"
 
 [observability]
 enabled = true
+invocation_logs = false
