--- a/service/server/config/wrangler/dev/vspo-portal-cron/wrangler.toml
+++ b/service/server/config/wrangler/dev/vspo-portal-cron/wrangler.toml
@@ -101,8 +101,9 @@ class_name = "AnalyzeClipsWorkflow"
 SERVICE_NAME = "dev-vspo-portal-cron"
 ENVIRONMENT = "development"
 LOG_TYPE = "json"
-LOG_MINLEVEL = "0"
+LOG_MINLEVEL = "info"
 LOG_HIDE_POSITION = "true"
 
 [observability]
 enabled = true
+invocation_logs = false
