--- a/service/vspo-schedule/v2/web/package.json
+++ b/service/vspo-schedule/v2/web/package.json
@@ -31,7 +31,7 @@
     "@mui/material-nextjs": "^7.1.0",
     "@mui/system": "^7.1.0",
     "@next/third-parties": "^15.3.3",
-    "@opennextjs/cloudflare": "^1.2.0",
+    "@opennextjs/cloudflare": "^1.4.0",
     "@vspo-lab/api": "workspace:^",
     "@vspo-lab/dayjs": "workspace:^",
     "@vspo-lab/error": "workspace:^",
@@ -42,7 +42,7 @@
     "i18next": "^23.11.5",
     "next": "catalog:",
     "next-i18next": "^15.3.1",
-    "next-pwa": "^5.6.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "next-sitemap": "^4.2.3",
     "react": "catalog:",
     "react-dom": "catalog:",
