--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,7 +19,7 @@ catalog:
   "@cloudflare/workers-types": ^4.20250502.0
   
   # React ecosystem
-  next: ^14.2.30
+  next: 14.2.28
   react: ^19.0.0
   react-dom: ^19.0.0
 
