--- a/service/server/config/wrangler/prd/vspo-portal-gateway/wrangler.jsonc
+++ b/service/server/config/wrangler/prd/vspo-portal-gateway/wrangler.jsonc
@@ -1,6 +1,6 @@
 /**
- * Gateway configuration with workflow bindings
- * Generated at 2025-08-06T15:48:49.845Z
+ * Gateway configuration with service bindings
+ * Generated at 2025-08-12T09:03:03.807Z
  * For more details on how to configure Wrangler, refer to:
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
@@ -9,95 +9,78 @@
   "name": "vspo-portal-gateway",
   "compatibility_date": "2024-10-22",
   "send_metrics": false,
-  "compatibility_flags": ["nodejs_compat", "nodejs_als"],
+  "compatibility_flags": [
+    "nodejs_compat",
+    "nodejs_als"
+  ],
   "main": "cmd/server/gateway.ts",
   "logpush": true,
   "kv_namespaces": [
     {
       "binding": "APP_KV",
-      "id": "PRODUCTION_KV_ID_HERE"
+      "id": "14bf3d407655490e9f377efbb4c3352b"
     }
   ],
   "services": [
     {
-      "binding": "SEARCH_STREAMS_WORKFLOW",
-      "service": "search-streams",
-      "entrypoint": "WorkflowService"
+      "binding": "STREAM_QUERY_SERVICE",
+      "service": "stream-query",
+      "entrypoint": "StreamQueryService"
     },
     {
-      "binding": "SEARCH_CHANNELS_WORKFLOW",
-      "service": "search-channels",
-      "entrypoint": "WorkflowService"
+      "binding": "CLIP_QUERY_SERVICE",
+      "service": "clip-query",
+      "entrypoint": "ClipQueryService"
     },
     {
-      "binding": "TRANSLATE_STREAMS_WORKFLOW",
-      "service": "translate-streams",
-      "entrypoint": "WorkflowService"
+      "binding": "CREATOR_QUERY_SERVICE",
+      "service": "creator-query",
+      "entrypoint": "CreatorQueryService"
     },
     {
-      "binding": "TRANSLATE_CREATORS_WORKFLOW",
-      "service": "translate-creators",
-      "entrypoint": "WorkflowService"
+      "binding": "DISCORD_QUERY_SERVICE",
+      "service": "discord-query",
+      "entrypoint": "DiscordQueryService"
     },
     {
-      "binding": "DISCORD_SEND_MESSAGES_WORKFLOW",
-      "service": "discord-send-messages",
-      "entrypoint": "WorkflowService"
+      "binding": "EVENT_QUERY_SERVICE",
+      "service": "event-query",
+      "entrypoint": "EventQueryService"
     },
     {
-      "binding": "SEARCH_MEMBER_STREAMS_BY_CHANNEL_WORKFLOW",
-      "service": "search-member-streams-by-channel",
-      "entrypoint": "WorkflowService"
+      "binding": "FREECHAT_QUERY_SERVICE",
+      "service": "freechat-query",
+      "entrypoint": "FreechatQueryService"
     },
     {
-      "binding": "DELETE_STREAMS_WORKFLOW",
-      "service": "delete-streams",
-      "entrypoint": "WorkflowService"
+      "binding": "CLIP_ANALYSIS_QUERY_SERVICE",
+      "service": "clip-analysis-query",
+      "entrypoint": "ClipAnalysisQueryService"
     },
     {
-      "binding": "DISCORD_DELETE_ALL_WORKFLOW",
-      "service": "discord-delete-all",
-      "entrypoint": "WorkflowService"
+      "binding": "STREAM_COMMAND_SERVICE",
+      "service": "stream-command",
+      "entrypoint": "StreamCommandService"
     },
     {
-      "binding": "DISCORD_SEND_MESSAGE_ALL_CHANNEL_WORKFLOW",
-      "service": "discord-send-message-all-channel",
-      "entrypoint": "WorkflowService"
+      "binding": "CLIP_COMMAND_SERVICE",
+      "service": "clip-command",
+      "entrypoint": "ClipCommandService"
     },
     {
-      "binding": "DISCORD_SEND_MESSAGE_CHANNELS_WORKFLOW",
-      "service": "discord-send-message-channels",
-      "entrypoint": "WorkflowService"
+      "binding": "CREATOR_COMMAND_SERVICE",
+      "service": "creator-command",
+      "entrypoint": "CreatorCommandService"
     },
     {
-      "binding": "EXIST_CLIPS_WORKFLOW",
-      "service": "exist-clips",
-      "entrypoint": "WorkflowService"
+      "binding": "DISCORD_COMMAND_SERVICE",
+      "service": "discord-command",
+      "entrypoint": "DiscordCommandService"
     },
     {
-      "binding": "SEARCH_CLIPS_WORKFLOW",
-      "service": "search-clips",
-      "entrypoint": "WorkflowService"
-    },
-    {
-      "binding": "SEARCH_CLIPS_BY_VSPO_MEMBER_NAME_WORKFLOW",
-      "service": "search-clips-by-vspo-member-name",
-      "entrypoint": "WorkflowService"
-    },
-    {
-      "binding": "ACCESS_VSPO_SCHEDULE_SITE_WORKFLOW",
-      "service": "access-vspo-schedule-site",
-      "entrypoint": "WorkflowService"
-    },
-    {
-      "binding": "FETCH_CLIPS_BY_CREATOR_WORKFLOW",
-      "service": "fetch-clips-by-creator",
-      "entrypoint": "WorkflowService"
-    },
-    {
-      "binding": "ANALYZE_CLIPS_WORKFLOW",
-      "service": "analyze-clips",
-      "entrypoint": "WorkflowService"
+      "binding": "EVENT_COMMAND_SERVICE",
+      "service": "event-command",
+      "entrypoint": "EventCommandService"
     }
   ],
   "vars": {
