--- a/service/server/project.json
+++ b/service/server/project.json
@@ -7,108 +7,6 @@
         "command": "bash scripts/dry-run-all-workers.sh"
       }
     },
-    "build-dryrun:access-vspo-schedule-site": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-access-vspo-schedule-site.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:analyze-clips": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-analyze-clips.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:delete-streams": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-delete-streams.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:discord-delete-all": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-discord-delete-all.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:discord-send-message-all-channel": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-discord-send-message-all-channel.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:discord-send-message-channels": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-discord-send-message-channels.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:discord-send-messages": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-discord-send-messages.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:exist-clips": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-exist-clips.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:fetch-clips-by-creator": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-fetch-clips-by-creator.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:search-channels": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-search-channels.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:search-clips-by-vspo-member-name": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-search-clips-by-vspo-member-name.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:search-clips": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-search-clips.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:search-member-streams-by-channel": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-search-member-streams-by-channel.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:search-streams": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-search-streams.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:translate-creators": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-translate-creators.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:translate-streams": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/dev-translate-streams.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
-    "build-dryrun:vspo-portal-app": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-app/wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
-      }
-    },
     "build-dryrun:vspo-portal-cron": {
       "executor": "nx:run-commands",
       "options": {
@@ -121,10 +19,85 @@
         "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-gateway/wrangler.jsonc --dry-run --script cmd/server/gateway.ts"
       }
     },
+    "build-dryrun:clip-analysis-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-clip-analysis-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:clip-command": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-clip-command.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:clip-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-clip-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:creator-command": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-creator-command.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:creator-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-creator-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:discord-command": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-discord-command.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:discord-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-discord-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:event-command": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-event-command.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:event-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-event-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:freechat-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-freechat-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:stream-command": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-stream-command.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
+    "build-dryrun:stream-query": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy --config config/wrangler/dev/vspo-portal-service/dev-stream-query.wrangler.jsonc --dry-run --script cmd/server/internal/application/index.ts"
+      }
+    },
     "ci": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": ["nx run vspo-portal-server:build-dryrun", "pnpm test"],
+        "commands": [
+          "nx run vspo-portal-server:build-dryrun",
+          "pnpm test"
+        ],
         "parallel": false
       }
     }
